# device-service/src/main/resources/openapi/device-api.yml
@@ -6,6 +6,22 @@ servers:
   - url: http://localhost:8886
 paths:
   /api/v1/devices:
+    get:
+      tags:
+        - DeviceV1
+      summary: Получить все устройства
+      operationId: getDevices
+      responses:
+        '200':
+          description: Список устройств
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Device'
+        '404':
+          $ref: '#/components/responses/DeviceError'
     post:
       tags:
         - DeviceV1
